@@ -1,3 +1,9 @@
+2015-03-03  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
+	Render glyphs one by one (previously we did it in groups, for
+	simplicity). This will allow rendering them backwards.
+
 2015-03-02  Xavi Artigas  <xartigas@fluendo.com>
 
 	* testsuite/ttmlrender-play-0.10.sh:
